--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+#owner{
+    font-style: italic;
+    color: rebeccapurple;
+    margin-bottom: 100px;
+    
+  
+}
 body{
     padding: 100px;
 }
@@ -17,7 +24,7 @@ body{
     background-color: orange;
 }
 .deposit, .withdraw, .balance{
-    margin: 0 50px;
+    margin: 5px 50px;
     color: white;
     padding: 20px;
     border-radius: 10px;
